# delve-taxonomy

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  TESTING_GUIDE.md  docker-compose.yml  pyproject.toml  setup_venv.sh
.langgraph_api/: .langgraph_checkpoint.2.pckl
api/: README.md  __init__.py  main.py  models.py
docs/: api-reference.mdx  cli-reference.mdx  configuration-guide.mdx  deployment.mdx  docs.json  examples.mdx  how-it-works.mdx  installation.mdx  introduction.mdx  js-client.mdx  js-sdk-reference.mdx  mint.json  quickstart.mdx  sdk-reference.mdx  typescript-integration.mdx  typescript-sdk.mdx
examples/: README.md  advanced_usage.py  basic_csv_example.py  dataframe_example.py  json_example.py  predefined_taxonomy_example.py  sample_data.csv  sample_data.json  sample_taxonomy.csv  sample_taxonomy.json  value_streams_taxonomy.csv  value_streams_taxonomy.json
js/: README.md  package.json
js/src/: index.ts
sdk-js/: README.md  package.json  tsconfig.json
sdk-js/src/: index.ts
src/delve/: __init__.py  client.py  configuration.py  graph.py  prompts.py  result.py  routing.py  state.py  utils.py
src/delve/api/: __init__.py  jobs.py  schemas.py  server.py
src/delve/cli/: main.py  utils.py
src/delve/core/: classifier.py  data_loader.py  document_labeler.py  summarizer.py  taxonomy_generator.py
src/react_agent/: configuration.py  graph.py  prompts.py  state.py  utils.py
src/react_agent/nodes/: doc_labeler.py  minibatches_generator.py  runs_retriever.py  summary_generator.py  taxonomy_approval.py  taxonomy_generator.py  taxonomy_reviewer.py  taxonomy_updater.py
tests/integration_tests/: test_graph.py  test_jira_issues.py  test_value_streams.py
tests/unit_tests/: test_classifier.py  test_configuration.py  test_data_loader.py
ts/: README.md  package.json
ts/src/: client.ts  index.ts  nodes.ts  prompts.ts  types.ts  utils.ts
