[project]
name = "delve"
version = "0.1.0"
description = "AI-powered taxonomy generation for your data"
authors = [
    { name = "Antonio Torres", email = "antorres@example.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["taxonomy", "classification", "nlp", "ai", "langchain", "langgraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "langgraph>=0.2.6",
    "langchain>=0.2.14",
    "langchain-anthropic>=0.1.23",
    "langchain-openai>=0.1.22",
    "langchain-fireworks>=0.1.7",
    "langchain-community>=0.2.17",
    "langsmith>=0.1.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.0",
    "pandas>=2.0.0",
    "jsonpath-ng>=1.6.0",
    "rich>=13.0.0",
]

[project.scripts]
delve = "delve.cli.main:cli"

[project.optional-dependencies]
dev = [
    "mypy>=1.11.1",
    "ruff>=0.6.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["delve"]
[tool.setuptools.package-dir]
delve = "src/delve"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
